api/deployments/kubernetes/overlays/sovereign-au/postgres-env-simple-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lexure-postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
